Closed
Bug 925066
Opened 12 years ago
Closed 12 years ago
Remove unused "#include nsDebug.h" from nsAlgorithm.h
Categories
(Core :: XPCOM, defect)
Tracking
()
RESOLVED
FIXED
mozilla27
People
(Reporter: dholbert, Assigned: dholbert)
References
Details
Attachments
(1 file)
741 bytes,
patch
|
jst
:
review+
|
Details | Diff | Splinter Review |
nsAlgorithm.h contains:
> 14 #ifndef nsDebug_h___
> 15 #include "nsDebug.h"
> 16 // for NS_ASSERTION
> 17 #endif
http://mxr.mozilla.org/mozilla-central/source/xpcom/string/public/nsAlgorithm.h#14
There are, however, no usages of NS_ASSERTION in that file. The last usages were removed in 2008, in bug 282083's patch.
So, we can drop the #include.
Assignee | ||
Comment 1•12 years ago
|
||
Updated•12 years ago
|
Attachment #815041 -
Flags: review?(jst) → review+
Assignee | ||
Comment 2•12 years ago
|
||
Flags: in-testsuite-
Comment 3•12 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla27
You need to log in
before you can comment on or make changes to this bug.
Description
•