Bug 925066: Remove unused "#include nsDebug.h" from nsAlgorithm.h. r=jst